--- a/index.ipynb
+++ b/index.ipynb
@@ -1057,7 +1057,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = li\n",
+    "names_and_ranks = []\n",
+    "for index in cit\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
