--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for index in cit\n",
+    "for index in city_indices:\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
