--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f\"{index+1.} {🌃 _names[index]}\")\n",
+    "    names_and_ranks.append(f\"{index+1}. {🌃 _names[index]}\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
