Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,22 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<fstring>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<fstring>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (🌃 _names[index])\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f\"{index+1}. {🌃 _names[index]}\")\n",
+    "    names_and_ranks.append(f\"{index+1}. {city_names[index]}\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
